# docs/swagger.json
@@ -772,8 +772,11 @@
         "models.Note": {
             "type": "object",
             "properties": {
-                "category": {
-                    "$ref": "#/definitions/models.Category"
+                "category_id": {
+                    "type": "integer"
+                },
+                "category_name": {
+                    "type": "string"
                 },
                 "content": {
                     "type": "string"
